--- a/docker/inferece_api/Dockerfile
+++ b/docker/inferece_api/Dockerfile
@@ -14,18 +14,20 @@ RUN python3.10 -m pip install --upgrade pip
 RUN python3.10 -m pip install torch==2.2.2 torchvision==0.17.2 torchaudio==2.2.2 \
     --index-url https://download.pytorch.org/whl/cu118
 
-COPY hallo2/requirements.txt app/requirements.txt
+RUN git clone https://github.com/fudan-generative-vision/hallo2 .
 
 RUN python3.10 -m pip install -r requirements.txt
+
+# fix version of diffusers
+RUN python3.10 -m pip install diffusers==0.32.2
 
 RUN python3.10 -m pip install huggingface_hub
 
-COPY inference_api/requirements.txt app/requirements.txt
+RUN huggingface-cli download fudan-generative-ai/hallo2 --local-dir ./pretrained_models
 
-RUN python3.10 -m pip install -r requirements.txt
+COPY inference_api/additional_requirements.txt /app/additional_requirements.txt
 
-COPY hallo2/hallo app/hallo
-COPY hallo2/scripts/inferece_long.py app/scripts/inferece_long.py
+RUN python3.10 -m pip install -r additional_requirements.txt
 
 COPY inference_api/defaut.yaml app/default.yaml
 COPY inference_api/main.py app/main.py
