--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,9 @@ services:
     expose:
       - 9000
       - 9001
+    ports:
+      - 9000:9000
+      - 9001:9001
     environment:
       - TZ=Europe/Berlin
       - MINIO_ROOT_USER=${S3_ACCESS_KEY_ID}
